--- a/Alin_Son/templates/base.html
+++ b/Alin_Son/templates/base.html
@@ -1,4 +1,4 @@
-{% load crispy_forms_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,12 +21,20 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+   
   </head>
   <body>
 
-    {% block content %}
-      
-    {% endblock content %}
+    <main class="container">
+      <div class="row">
+        <div class="col-md-8">
+          {% block content %}
+            
+          {% endblock content %}
+        </div>
+      </div>
+    </main>
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
