--- a/Alin_Son/templates/base/login.html
+++ b/Alin_Son/templates/base/login.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="container mt-5">
-            <form action="{% url 'reg' %}" method="POST">{% csrf_token %}
+            <form action="{% url 'login' %}" method="POST">{% csrf_token %}
                 {% for field in form %}
                     <div class="form-group">
                          {% if field.errors %}
