adapting user form modals

--- a/Alin_Son/templates/base/login.html
+++ b/Alin_Son/templates/base/login.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+
 {% load crispy_forms_tags %}
-{% block content %}
-    <div class="container mt-5">
-            <form action="{% url 'login' %}" method="POST">{% csrf_token %}
-                {% for field in form %}
+<!-- {% block content %} -->
+    <!-- <div class="container mt-5"> -->
+            <!-- <form action="{% url 'login' %}" method="POST">{% csrf_token %} -->
+                {% for field in login_form %}
                     <div class="form-group">
                          {% if field.errors %}
                             <div class="alert alert-danger" role="alert">
@@ -14,10 +14,10 @@
                     
                     
                     {% endfor %}
-                    {{ form|crispy }}
+                    {{ login_form|crispy }}
                    
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+                <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+            <!-- </form> -->
             
-    </div>
-{% endblock content %}
+   <!-- </div> -->
+ <!-- {% endblock content %} -->
